Fix spacing of profile bio in relation to posts

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -9,8 +9,8 @@
     height: 17vw; 
     min-width: 180px;
     min-height: 180px;
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 200px;
     bottom: 100px;
 }
 
@@ -19,8 +19,8 @@
     height: 15vw; 
     min-width: 160px;
     min-height: 160px;
-    max-width: 270px;
-    max-height: 270px;
+    max-width: 180px;
+    max-height: 180px;
 }
 
 @media (min-width: 1400px) {
